# shunting-yard-cpp

./: .convert.cpp.swp  .equation.cpp.swp  .equation.hpp.swp  .gitignore  .utility.cpp.swp  .utility.hpp.swp  LICENSE  Makefile  README.md  color.hpp  convert.cpp  equation.cpp  equation.hpp  evaluate.cpp  gui.cpp  main.cpp  meson.build  rpn.hpp  utility.cpp  utility.hpp  varequation.cpp  varequation.hpp
